# ros2-autonomous-mobile-robot

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  dev-requirements.txt  package.xml  pyproject.toml  setup.cfg  setup.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: python-core.yml
config/: faultnav.yaml
docs/: architecture.md  project_context.md  project_status.md  robotics_engineering_rules.md  security.md  testing.md
docs/decisions/: 000-template.md
examples/: figure_eight_combined_faults_estimator_metrics.json  figure_eight_combined_faults_sensor_metrics.json  figure_eight_metrics.json  figure_eight_nominal_estimator_metrics.json  figure_eight_nominal_sensor_metrics.json
launch/: faultnav.launch.py
resource/: faultnav_robot
src/faultnav_robot/: __init__.py  differential_drive.py  estimator_reports.py  estimators.py  experiment_cli.py  experiments.py  odometry_node.py  scenarios.py  sensor_reports.py  sensors.py
tests/: test_differential_drive.py  test_estimators.py  test_experiments.py  test_scenarios.py  test_sensors.py
