<?xml version="1.0"?>
<package format="3">
  <name>faultnav_robot</name>
  <version>0.1.0</version>
  <description>Python-first ROS 2 foundation for mobile-robot odometry and navigation experiments.</description>
  <maintainer email="s.eneserisen@gmail.com">Sadik Enes Erisen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
